@@ -1,3 +1,8 @@
+2006-10-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Fix EXTRA_DIST.
+	* Makefile.am (EXTRA_DIST): Fix.
+
 2006-10-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	Add a sample test to show how to use the test-suite.
